@@ -20,5 +20,14 @@
                 [ 86, 24 ], [ 86, 25 ], [ 87, 23 ], [ 87, 24 ], [ 87, 25 ], [ 88, 22 ], [ 88, 23 ], [ 88, 24 ], [ 89, 22 ], [ 89, 23 ]
             ]
         }
+    ],
+    "elements_to_delete": [
+        {
+            "element_index": 1,
+            "coordinates": [
+                [ 86, 25 ],
+                [ 87, 23 ], [ 87, 25 ]
+            ]
+        }
     ]
 }
