@@ -9,6 +9,7 @@
 - Fix: [#21959] “Save this before...?” message does not appear when selecting “New Game”.
 - Fix: [#22231] Invalid object version can cause a crash.
 - Fix: [#22653] Add several .parkpatch files for missing water tiles in RCT1 and RCT2 scenarios.
+- Fix: [#22654] Improve several .parkpatch files to remove misplaced scenario elements in RCT1 and RCT2 scenarios.
 - Fix: [#22655] Fix surface style of Botany Breakers around missing water tiles.
 - Fix: [#22734] Support clearance above steep Side-Friction track is too low.
 
